test/files/neg/numeric-add-string-warning.check
numeric-add-string-warning.scala:4: warning: method + in class Int is deprecated (since 2.13.0): Adding a number and a String is deprecated. Use the string interpolation `s"$num$str"`
  val x = 4 + "2"
            ^
error: No warnings can be incurred under -Werror.
1 warning
1 error
